<resources>
    <string name="app_name">煎蛋输入法</string>
    <string name="english_ime_name">OmeletteInputMethod</string>
    <string name="Chinese_ime_name">煎蛋输入法</string>
    <string name="tips"> A </string>
    <string name="subtype_en_US">TestDemo(EN)</string>
    <string name="HelloWorld">欢迎使用煎蛋输入法，这仅仅是个开始</string>
    <string name="oneSinogramString"></string>

    <string name="account">请输入登录的账号</string>
    <string name="password">请输入登录密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="loading">正在加载数据</string>
</resources>
